<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_bg"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <!--<TextView-->
    <!--android:id="@+id/tv_modify_person_info"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/dimen_common_50"-->
    <!--android:layout_marginTop="@dimen/dimen_common_20"-->
    <!--android:background="@android:color/white"-->
    <!--android:drawableRight="@mipmap/into"-->
    <!--android:gravity="center_vertical"-->
    <!--android:paddingLeft="@dimen/dimen_common_10"-->
    <!--android:paddingRight="@dimen/dimen_common_10"-->
    <!--android:text="@string/str_modify_personal_information"/>-->

    <RelativeLayout
        android:id="@+id/rl_current_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_common_10"
            android:text="@string/str_version_update"/>

        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dimen_common_10"
            android:text="@string/str_current_version"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_common_5"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_50"
            android:drawableRight="@mipmap/into"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_common_10"
            android:paddingRight="@dimen/dimen_common_10"
            android:text="@string/str_change_password"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_1"
            android:layout_marginLeft="@dimen/dimen_common_10"
            android:background="@color/color_common_gray"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_50"
            android:drawableRight="@mipmap/into"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_common_10"
            android:paddingRight="@dimen/dimen_common_10"
            android:text="@string/str_about_me"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_clear_history_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_marginTop="@dimen/dimen_common_5"
        android:background="@android:color/white"
        android:drawableRight="@mipmap/into"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_common_10"
        android:paddingRight="@dimen/dimen_common_10"
        android:text="@string/str_empty_history_data"/>

    <TextView
        android:id="@+id/tv_login_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_common_60"
        android:layout_marginRight="@dimen/dimen_common_60"
        android:layout_marginTop="@dimen/dimen_common_40"
        android:background="@drawable/shape_corners_8_solid_red"
        android:gravity="center"
        android:text="@string/str_login_out"
        android:textColor="@android:color/white"/>

</LinearLayout>