<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_main_bg"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dimen_common_20"
        android:src="@mipmap/back"/>

    <!--<com.enrich.pengyouhui.views.RoundImageView-->
    <!--android:id="@+id/civ_head"-->
    <!--android:layout_width="80dp"-->
    <!--android:src="@mipmap/ic_launcher"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="@dimen/dimen_common_46"/>-->
    <com.enrich.pengyouhui.views.CircleImageView
        android:id="@+id/civ_head"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_common_46"
        android:src="@mipmap/icon_default_head_img"
        app:border_color="@android:color/white"
        app:border_width="@dimen/dimen_common_1"/>

    <EditText
        android:id="@+id/et_user_mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_below="@+id/civ_head"
        android:layout_marginLeft="@dimen/dimen_common_20"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:background="@drawable/bg_shape_5_solid_white_alpha_2"
        android:drawableLeft="@mipmap/icon_et_me"
        android:drawablePadding="@dimen/dimen_common_10"
        android:inputType="phone"
        android:paddingLeft="@dimen/dimen_common_20"
        android:gravity="center_vertical"
        android:textSize="@dimen/dimen_common_font_14"
        android:hint="@string/str_login_hint_mobile"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/et_user_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_below="@+id/et_user_mobile"
        android:layout_marginLeft="@dimen/dimen_common_20"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:background="@drawable/bg_shape_5_solid_white_alpha_2"
        android:drawableLeft="@mipmap/icon_et_pwd"
        android:drawablePadding="@dimen/dimen_common_10"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:hint="@string/str_login_hint_pwd"
        android:paddingLeft="@dimen/dimen_common_20"
        android:textSize="@dimen/dimen_common_font_14"
        android:textColorHint="@android:color/white"/>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_user_pwd"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_10"
        android:padding="@dimen/dimen_common_10"
        android:text="@string/str_login_forget_pwd"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forget_pwd"
        android:layout_marginLeft="@dimen/dimen_common_20"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_10"
        android:background="@drawable/bg_shape_20_solid"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_common_10"
        android:paddingTop="@dimen/dimen_common_10"
        android:text="@string/str_login"
        android:textColor="#e3c3ae"
        android:textSize="@dimen/dimen_common_font_16"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginLeft="@dimen/dimen_common_20"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_20">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_1"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/textView"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:paddingLeft="@dimen/dimen_common_10"
            android:paddingRight="@dimen/dimen_common_10"
            android:singleLine="true"
            android:text="@string/str_third_login"
            android:textSize="@dimen/dimen_common_font_18"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_1"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView"
            android:background="@android:color/white"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_marginLeft="@dimen/dimen_common_20"
        android:layout_marginRight="@dimen/dimen_common_20"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_hhang"
            android:layout_width="@dimen/dimen_common_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_common_5"
            android:drawableTop="@mipmap/icon_haih"
            android:gravity="center"
            android:text="@string/str_third_login_haihang"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv_weixin"
            android:layout_width="@dimen/dimen_common_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_common_5"
            android:drawableTop="@mipmap/icon_weixin"
            android:gravity="center"
            android:text="@string/str_third_login_weixin"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="@dimen/dimen_common_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_common_5"
            android:drawableTop="@mipmap/icon_qq"
            android:gravity="center"
            android:text="@string/str_third_login_qq"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv_sina"
            android:layout_width="@dimen/dimen_common_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_common_5"
            android:drawableTop="@mipmap/icon_sina"
            android:gravity="center"
            android:text="@string/str_third_login_sina"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>